--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@types/file-saver": "^2.0.7",
+    "dexie": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "inngest": "^3.51.0",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
